--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <swagger2.version>2.9.2</swagger2.version>
         <fastjson.version>1.2.47</fastjson.version>
         <guava.version>25.1-jre</guava.version>
+        <lombok.version>1.18.0</lombok.version>
     </properties>
 
     <dependencies>
@@ -110,6 +111,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
