--- a/src/main/resources/application-neverxp.yml
+++ b/src/main/resources/application-neverxp.yml
@@ -1,7 +1,10 @@
-#Êı¾İ¿âÅäÖÃ
+#æ•°æ®åº“é…ç½®
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: 'jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8&useSSL=true&allowMultiQueries=true'
     username: root
     password: 123qwe!@#
+  data:
+    mongodb:
+      uri: 'mongodb://127.0.0.1:27017/blog'
