配置mysql连接池；修正错误

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,25 @@ server.servlet.context-path = /blog
 server.tomcat.uri-encoding = UTF-8
 server.port=8080
 
+# MySQL数据库连接池Druid配置
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=100
+spring.datasource.maxWait=600000
+spring.datasource.timeBetweenEvictionRunsMillis=600000
+spring.datasource.minEvictableIdleTimeMillis=3000000
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.filters=stat
+#spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+spring.datasource.useGlobalDataSourceStat=true
+spring.datasource.logSlowSql=true
+
 #日志配置
 logging.path=/logs
 logging.pattern.console='%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %C:<%M>:%L %-5p - %m%n'
