修正配置文件；打包相关

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,7 @@ spring.datasource.logSlowSql=true
 
 #日志配置
 logging.path=/logs
+logging.file=blog.log
 logging.pattern.console='%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %C:<%M>:%L %-5p - %m%n'
 logging.level.com.weskyx.blog = info
 
