--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,7 @@
     </dependencies>
 
     <build>
+        <finalName>blog</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
