--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -1,6 +1,6 @@
 #数据库配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8&useSSL=true&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
 spring.datasource.username=bloguser
 spring.datasource.password=Blog123qwe!@#
 
