--- a/src/main/resources/application-iJinxin.properties
+++ b/src/main/resources/application-iJinxin.properties
@@ -2,6 +2,6 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Will123qwe!@#
+spring.datasource.password=ijinxin123qwe!@#
 
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/blog
