--- a/src/main/resources/application-neverxp.properties
+++ b/src/main/resources/application-neverxp.properties
@@ -1,7 +1,7 @@
 #数据库配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=123qwe!@#
+spring.datasource.url=jdbc:mysql://47.93.56.189:3306/blog?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=UTF-8&useSSL=false&allowMultiQueries=true&allowPublicKeyRetrieval=true
+spring.datasource.username=bloguser
+spring.datasource.password=Blog123qwe!@#
 
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/blog
